use getFirst method instead of get(0)